[package]
name = "density-rs"
version = "0.1.0"
authors = ["Crypto-Spartan <accounts@cryptospartan.net>", "k0dai <guillaume.voirin@gmail.com>"]
edition = "2021"
#rust-version = "1.56" commented out due to: https://github.com/rust-lang/cargo/issues/9930
description = "Rust bindings to density compression library"
readme = "README.md"
homepage = "https://github.com/Crypto-Spartan/density-rs"
repository = "https://github.com/Crypto-Spartan/density-rs"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.72"
bindgen = "0.59.2"
rustc_version = "0.4.0"

[profile.release]
lto = "fat"
codegen-units=1